--- a/portfolio.html
+++ b/portfolio.html
@@ -12,15 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     
-    <link rel="stylesheet" href="https: //cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/1.1.0/normalize.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
 
-    <header>
+    <header class="header">
     
         <div class="container nav-container">
             <a class="logo" href="index.html">
@@ -56,7 +55,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/techno.jpg" alt="веб-сайт Технокряк" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Технокряк</h2>
                                 <p class="section-subtitle">Веб-сайт</p>
                             </div>
@@ -66,7 +65,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/poster.jpg" alt="дизайн Постер New Orlean vs Golden Star" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="section-subtitle">Дизайн</p>
                             </div>
@@ -76,7 +75,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/restaurant.jpg" alt="приложение Ресторан Seafood" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Ресторан Seafood</h2>
                                 <p class="section-subtitle">Приложение</p>
                             </div>
@@ -86,7 +85,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/prime-project.jpg" alt="маркетинг Проект Prime" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Проект Prime</h2>
                                 <p class="section-subtitle">Маркетинг</p>
                             </div>
@@ -96,7 +95,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/boxes-project.jpg" alt="приложение Проект Boxes" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Проект Boxes</h2>
                                 <p class="section-subtitle">Приложение</p>
                             </div>
@@ -106,7 +105,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/inspiration-website.jpg" alt="веб-сайт Inspiration has no Borders" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Inspiration has no Borders</h2>
                                 <p class="section-subtitle">Веб-сайт</p>
                             </div>
@@ -116,7 +115,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/edition.jpg" alt="дизайн Издание Limited Edition" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Издание Limited Edition</h2>
                                 <p class="section-subtitle">Дизайн</p>
                             </div>
@@ -126,7 +125,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/lab-project.jpg" alt="маркетинг Проект LAB" width="370">
-                            <div>        
+                            <div class="galary-container">        
                                 <h2 class="section-title">Проект LAB</h2>
                                 <p class="section-subtitle">Маркетинг</p>
                             </div>
@@ -136,7 +135,7 @@
                     <li class="galary-element">
                         <a href="#" class="link">
                             <img class="img" src="./images/growingbisness.jpg" alt="приложение Growing Business" width="370">
-                            <div>
+                            <div class="galary-container">
                                 <h2 class="section-title">Growing Business</h2>
                                 <p class="section-subtitle">Приложение</p>
                             </div>
@@ -150,7 +149,7 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <a class="logo footer" href="index.html">
+            <a class="logo logo-footer" href="index.html">
                 <span class="logo-accent">Web</span>Studio
             </a>
             <address>
